[metadata]
name = SCons.Tool.pandoc
version = 1.0.0
author = Keith F. Prussing
author_email = kprussing74@gmail.com
description = Pandoc builder for SCons
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE.rst
url = https://www.scons.org
classifiers =
    Development Status :: 4 - Beta
    Topic :: Software Development :: Build Tools
    Topic :: Documentation
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =
    pandoc
    scons

[options]
package_dir =
    =sconscontrib
packages = find_namespace:
py_modules = __init__
python_requires = >=3.6, <4
install_requires =
    importlib_metadata; python_version<"3.8"
    panflute
    scons>=4.0
zip_safe = False

[options.packages.find]
where = sconscontrib

[mypy]
[mypy-nox]
ignore_missing_imports = True

[mypy-panflute]
ignore_missing_imports = True

[mypy-SCons.*]
ignore_missing_imports = True
